<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">餐萌顾客端</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">餐萌</string>
    <string name="copyright_statement">Copyright ©2011&#8211;2012 Cm.com 版权所有</string>
    
    <!-- 公用字符串 -->
    <string name="loadingMore">正在努力为您加载，请稍后&#8230;&#8230;</string>
    <string name="money_yuan">元</string>
    <string name="gobackBtTxt">返回</string>
    
    <!-- 欢迎界面相关字符串 -->
    <string name="dialogUpdateSoftTitleTxt">软件更新</string>
    <string name="dialogUpdateSoftMsgTxt">本软件有新版本，需要更新吗?</string>
    <string name="dialogUpdateSoftPositiveTxt">更新</string>
    <string name="dialogUpdateSoftNegativeTxt">暂不更新</string>
    <string name="pdUpdateSoftMsgTxt">正在下载更新，请稍后</string>
    
    <!-- 访问网络状态提示信息 -->
    <string name="urlErr_networkErrTxt">网络异常，请检查你的网络环境</string>
    <string name="urlErr_otherErrTxt">很抱歉，发生了未知错误</string>
    <string name="urlErr_stopByUser">您取消了当前操作</string>
    <string name="urlErr_serverErrTxt">很抱歉，发生了服务器错误</string>
    <string name="urlErr_fileNotFoundTxt">很抱歉，您申请的资源不存在</string>
    
    <!-- 对话框按钮相关字符串 -->
    <string name="DgExitTitleTxt">您确定要退出吗？</string>
    <string name="DgExitInfoTxt">您如果确定要退出请点击确定，否则点击取消</string>
    <string name="DgPositiveBtTxt">确定</string>
    <string name="DgNegativeBtTxt">取消</string>
    <string name="DgQuxiaoDDTitleTxt">您确定要取消订单吗？</string>
    <string name="DgQuxiaoDDInfoTxt">您如果确定要取消订单请点击确定，否则点击取消</string>
    <string name="DgAddrDelTitleTxt">您确定要删除吗？</string>
    <string name="DgAddrDelInfoTxt">您如果确定要删除请点击确定，否则点击取消</string>
    <string name="DgGoodsCollectTitleTxt">您确定要收藏该商品吗？</string>
    <string name="DgGoodsCollectInfoTxt">您如果确定要收藏请点击确定，否则点击取消</string>
    <string name="DgShopCollectTitleTxt">您确定要收藏该商铺吗？</string>
    <string name="DgShopCollectInfoTxt">您如果确定要收藏该商铺请点击确定，否则点击取消</string>  
    <string name="DgShopCollectDelTitleTxt">您确定要删除该收藏吗？</string>
    <string name="DgShopCollectDelInfoTxt">您如果确定要删除该收藏请点击确定，否则点击取消</string>
    <string name="DgGoodsCollectDelTitleTxt">您确定要删除该收藏吗？</string>
    <string name="DgGoodsCollectDelInfoTxt">您如果确定要删除该收藏请点击确定，否则点击取消</string>
    <string name="DgPayTitleTxt">您确定要支付吗？</string>
    <string name="DgPayInfoTxt">您如果确定要支付请点击确定，否则点击取消</string>
    <string name="DgMakeOrderTitleTxt">您确定要生成订单吗？</string>
    <string name="DgMakeOrderInfoTxt">您如果确定要生成订单请点击确定，否则点击取消</string>
    <string name="DgAppraiseTitleTxt">您确定要提交评价吗？</string>
    <string name="DgAppraiseInfoTxt">您如果确定要提交评价请点击确定，否则点击取消</string>
    
    <!-- 主菜单相关 -->
    <string name="mainNavbar_mainPageBtTxt">到店用餐</string>
    <string name="mainNavbar_myOrderBtTxt">我的订单</string>
    <string name="mainNavbar_myCollectBtTxt">我的收藏</string>
    <string name="mainNavbar_reserveBtTxt">桌位预定</string>
    
     <!-- 登录界面 -->
    <string name="loginAy_titleTvTxt">用户登录</string>
    <string name="loginAy_userNameLable">用户名：</string>
    <string name="loginAy_passwdLable">密码：</string>
    <string name="loginAy_autoLoginCbTxt">自动登录</string>
    <string name="loginAy_loginBtTxt">登录</string>
    <string name="loginAy_registerBtTxt">注册</string>
    <string name="loginAy_userNameHintTxt">请输入用户名</string>
    <string name="loagiAy_passwdHintTxt">请输入密码</string>
    
    <string-array name="mainAy_soClassLable">
        <item name="goods">菜品</item>
        <item name="shop">饭店</item>
    </string-array>
    <string name="mainAy_soBtLable">搜</string>
    <string name="mainAy_sosoHintTxt">请输入搜索关键字</string>
    
    <!-- 主界面 -->
    <string name="mainAy_titleTvTxt">创建订单或参与点菜</string>
    <string name="mainAy_shopIdEditHint">请输入饭店号</string>
    <string name="mainAy_tableIdEditHint">请输入桌位号</string>
    <string name="mainAy_scanBtTxt">扫码输入</string>
    <string name="mainAy_scanLabel">扫描二维码</string>
    <string name="mainAy_cancelScanBtTxt">取消</string>
    <string name="mainAy_createOrderBtTxt">创建订单</string>
    <string name="mainAy_orderIdEtHint">请输入订单号</string>
    <string name="mainAy_partakeCodeHint">请输入点菜验证码</string>
    <string name="mainAy_dishBtTxt">参与点菜</string>
    
    <!-- 点菜界面 -->
    <string name="dishAy_titleTvTxt">点菜</string>
    <string name="dishAy_noFoodNotify">没有能点的菜</string>
    <string name="dishAy_orderDetailBtTxt">订单详情</string>
    <string name="dishAy_submitBtTxt">提交</string>
    <string name="dishAy_cancelBtTxt">取消</string>
    <string name="lidf_dishBtTxt">+</string>
    <string name="lidf_notDishBtTxt">-</string>
    <string name="dishAy_completeDishBtTxt">完成点菜</string>
    <string name="fdAy_titleTvTxt">菜谱详情</string>
    
    <!-- 订单列表界面 -->
    <string name="moAy_titleTvTxt">我的订单</string>
    <string name="moAy_noOrderNotify">没有订单</string>
    
    <!-- 订单详情界面 -->
    <string name="odAy_titleTvTxt">订单详情</string>
    <string name="odAy_noDishNotify">没有点菜</string>
    <string name="odAy_submitBtTxt">取消所选点菜</string>
    <string name="odAy_cancelBtTxt">取消选择</string>
    
    <!-- 我的收藏界面-->
    <string name="mcAy_titleTvTxt">我的收藏</string>
    <string name="mcAy_shopCBtTxt">饭店收藏</string>
    <string name="mcAy_foodCBtTxt">菜谱收藏</string>
    <string name="fscFm_noNotify">没有饭店收藏</string>
    <string name="ffcFm_noNotify">没有菜谱收藏</string>
    <string name="fscFm_submitBtTxt">删除所选</string>
    <string name="fscFm_cancelBtTxt">取消选择</string>
    <string name="ffcFm_submitBtTxt">删除所选</string>
    <string name="ffcFm_cancelBtTxt">取消选择</string>
    
    <!-- 桌位预定界面 -->
    <string name="rAy_titleTvTxt">桌位预定</string>
    <string name="rAy_noOrderNotify">没有饭店</string>
    <string-array name="reserveTypes">
        <item name="morning">早餐</item>
        <item name="noon">午餐</item>
        <item name="night">晚餐</item>
    </string-array>
    <string name="rtAy_ssBtTxt">搜索桌位</string>
    <string name="rtAy_submitBtTxt">预定所选</string>
    <string name="rtAy_cancelBtTxt">取消选择</string>
    <string name="rtAy_phoneHintTxt">输入联系电话</string>
    <string name="rtAy_personCountHintTxt">输入每桌用餐人数</string>
    
</resources>
