<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#e6eee6"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">
    
    <!-- 标题 -->
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:singleLine="true"
        android:textColor="#F84000"
        android:textSize="18dp"
       	android:text="@string/loginAy_titleTvTxt"/>
    
    <!-- 用户名密码 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:orientation="vertical"
        android:background="@drawable/login_input_bk">
        <!-- 用户名 -->
        <LinearLayout 
            android:layout_width="match_parent"
	        android:layout_height="49dp"
	        android:orientation="horizontal"
	        android:gravity="center_vertical"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"                
                android:text="@string/loginAy_userNameLable"/>
            <AutoCompleteTextView 
                android:id="@+id/loginAy_userNameAt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#ffffff"
        		android:textColor="#757575"
        		android:hint="@string/loginAy_userNameHintTxt"
                android:text=""/>
        </LinearLayout>
        <!-- 密码-->
        <LinearLayout 
            android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:orientation="horizontal"
	        android:gravity="center_vertical"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loginAy_passwdLable"/>
            <EditText 
                android:id="@+id/loginAy_passwdEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#ffffff"
                android:textColor="#757575"
                android:inputType="textPassword"
                android:hint="@string/loagiAy_passwdHintTxt"
                android:text=""/>
        </LinearLayout>
    </LinearLayout>
    <!-- 操作 -->
    <LinearLayout 
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="15dp">
            
            <Button 
                android:id="@+id/loginAy_registerBt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="14dp"
                android:background="@drawable/normal_button_selector1"
                android:textColor="#ffffff"
                android:text="@string/loginAy_registerBtTxt"/>
            <Button 
                android:id="@+id/loginAy_loginBt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="14dp"
                android:background="@drawable/normal_button_selector"
                android:textColor="#ffffff"
                android:text="@string/loginAy_loginBtTxt"/>
    </LinearLayout>
    <LinearLayout 
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
        <CheckBox 
                android:id="@+id/loginAy_autoLoginCb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/login_checkbox_style"
                android:checked="true"
                android:text="@string/loginAy_autoLoginCbTxt"/>
    </LinearLayout>
</LinearLayout>