<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <!-- 标题 -->
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:singleLine="true"
        android:ellipsize="end"
        android:textColor="#F84000"
        android:textSize="18dp"
        android:background="#d6e7f5"
        android:text="@string/rAy_titleTvTxt"
        />
    <!-- 搜索栏 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <DatePicker
            android:id="@+id/rtAy_reserveDateDp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></DatePicker>
        <Spinner 
            android:id="@+id/rtAy_reserveTypeSp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/reserveTypes"/>
        <Button
	        android:id="@+id/rtAy_ssBt"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/rtAy_ssBtTxt"/>
    </LinearLayout>
    
     <!-- 无记录提示 -->
    <TextView
            android:id="@+id/rtAy_noNotifyTv"            
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top|center"
            android:textSize="14sp"
            android:text="@string/rAy_noOrderNotify"
            android:drawableTop="@drawable/not_found"
            android:visibility="gone"/>
    <!-- 桌位列表 -->
    <ListView 
        android:id="@+id/rtAy_tableListLv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="visible"></ListView>
    
    <!-- 操作按钮 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
	        android:id="@+id/rtAy_submitBt"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/rtAy_submitBtTxt"/>
        <Button
	        android:id="@+id/rtAy_cancelBt"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/rtAy_cancelBtTxt"/>
    </LinearLayout>

</LinearLayout>
