<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <!-- 标题 -->
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:singleLine="true"
        android:ellipsize="end"
        android:textColor="#F84000"
        android:textSize="18dp"
        android:background="#d6e7f5"
        android:text="@string/dishAy_titleTvTxt"
        />
	<!-- 订单号和点菜参与码 -->
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
		    <TextView 
		        android:id="@+id/dishAy_orderIdTv"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text=""/>
		    <TextView 
		        android:id="@+id/dishAy_partakeCodeTv"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text=""/>
	    </LinearLayout>
	    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <Button
	        android:id="@+id/dishAy_orderDetailBt"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/dishAy_orderDetailBtTxt"/>
	    <Button
	        android:id="@+id/dishAy_completeDishBt"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/dishAy_completeDishBtTxt"/>
	    </LinearLayout>
	</LinearLayout>
	
	<!-- 横线 -->
    <LinearLayout android:layout_width="fill_parent"
       	android:layout_height="1dp"
       	android:background="#C8CCC8"></LinearLayout>
	<!-- 菜谱列表 -->	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" 
        android:orientation="vertical"
        android:padding="5dp"
        >
	    <TextView
            android:id="@+id/dishAy_noNotifyTv"            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/dishAy_noFoodNotify"
            android:drawableTop="@drawable/not_found"
            android:visibility="gone"/>
        <!-- android:textStyle="italic"
        android:textColor="#f00" -->
        <ListView
            android:id="@+id/dishAy_foodListLv" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
	    android:fadingEdge="none"></ListView>
	</LinearLayout>    
	
	<!-- 横线 -->
    <LinearLayout android:layout_width="fill_parent"
       	android:layout_height="1dp"
       	android:background="#C8CCC8"></LinearLayout>
    <!-- 操作按钮 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
	        android:id="@+id/dishAy_submitBt"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/dishAy_submitBtTxt"/>
        <Button
	        android:id="@+id/dishAy_cancelBt"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/dishAy_cancelBtTxt"/>
    </LinearLayout>
</LinearLayout>
